--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -1,4 +1,3 @@
-
 .slider {
   overflow: hidden;
 
@@ -30,6 +29,10 @@
   &__img {
     width: 100%;
     height: 100%;
+
+    @include onTable() {
+      height: 543px;
+    }
   }
 
   &__nav {
