--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -16,6 +16,9 @@ $menu-break-line-color: #ffffff80;
 $art-museum-label-color: #0f0e08;
 $art-museum-title-color: #000;
 
+//aside-label
+$aside-label-name-color: #687480;
+
 //button-arrow
 $button-arrow-background-color: $page-main-color;
 $button-arrow-background-color-second-color: $page-second-color;
