--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -49,7 +49,14 @@
     display: flex;
     justify-content: center;
 
+    margin: 0 auto;
+    max-width: 350px;
+
     @include pageGrid();
+
+    @include onTable() {
+      max-width: 100%;
+    }
   }
 
   &__input {
@@ -58,6 +65,8 @@
     font-size: 14px;
     font-weight: 400;
     line-height: 100%;
+
+    flex-grow: 1;
 
     background-color: #fff;
     border: none;
