--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,6 +7,7 @@
 @import "blocks/nav";
 @import "blocks/schedule";
 @import "blocks/art-museum";
+@import "blocks/aside-label";
 @import "blocks/main";
 @import "blocks/button";
 @import "blocks/section";
