--- a/src/styles/blocks/article.scss
+++ b/src/styles/blocks/article.scss
@@ -2,6 +2,10 @@
   @include pageGrid();
   @include contentPaddingInline();
 
+  @include onTable() {
+    padding-inline: 0;
+  }
+
   &__img {
     width: 100%;
     display: block;
