--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -90,9 +90,11 @@
     display: grid;
     column-gap: 30px;
     grid-template-columns: repeat(6, 1fr);
+    margin-inline: 39px;
   }
 
   @include onDesktop() {
     grid-template-columns: repeat(12, 1fr);
+    margin-inline: 55px;
   }
 }
