--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -7,6 +7,7 @@
 
     @include onTable() {
       padding-block: 51px 36px;
+      padding-inline: 0;
     }
   }
 
@@ -69,6 +70,10 @@
 
     @include onTable() {
       margin-top: 0;
+    }
+
+    @include onDesktop() {
+      min-width: 170px;
     }
   }
 
