Add hover effects and images stretching

--- a/src/styles/blocks/current-events.scss
+++ b/src/styles/blocks/current-events.scss
@@ -12,15 +12,15 @@
     }
   }
 
-  &__event {
+  &__exhibition {
     @include onTablet {
-      &:nth-child(2) {
+      &:last-child {
         margin-bottom: 48px;
       }
     }
 
     @include onDesktop {
-      &:nth-child(2) {
+      &:last-child {
         margin-bottom: 0;
       }
     }
