--- a/src/styles/blocks/field.scss
+++ b/src/styles/blocks/field.scss
@@ -52,6 +52,12 @@
     border: none;
     background-color: #f14a27;
 
+    cursor: pointer;
+
+    &:hover {
+      background-color: #d64123;
+    }
+
     @include onTablet {
       @include squareSize(70px);
     }
