--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -53,6 +53,12 @@
     }
   }
 
+  &__icon-link {
+    position: relative;
+
+    @include hoverUnderlineEffect($main-color);
+  }
+
   &__icon {
     @include squareSize(24px);
   }
