--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -4,6 +4,10 @@
     position: relative;
     margin-bottom: 20px;
 
+    @include onTablet {
+      margin-bottom: 30px;
+    }
+
     @include onDesktop {
       row-gap: 30px;
     }
