--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -44,13 +44,28 @@
     }
   }
 
+  &__item:nth-child(3) {
+    @include onDesktop {
+      max-width: 130px;
+    }
+  }
+
   &__link {
+    position: relative;
+    display: inline-block;
 
     text-decoration: none;
-    color: $main-bg-color;
+
+    &--color--main-bg {
+      color: $main-bg-color;
+
+      @include hoverUnderlineEffect($main-bg-color);
+    }
 
     &--color--main {
       color: $main-color;
+
+      @include hoverUnderlineEffect($main-color);
     }
   }
 }
