--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -11,6 +11,7 @@
     top: 0;
     left: 0;
     right: 0;
+    z-index: 1;
 
     transition: all $transition-time;
     opacity: 0;
@@ -21,6 +22,22 @@
       opacity: 1;
       transform: translateX(0);
       pointer-events: all;
+    }
+  }
+
+  &__transparency {
+    display: none;
+    position: absolute;
+    top: 0;
+
+    height: 100vh;
+    width: 100%;
+
+    background-color: $transparency-bg-color;
+    opacity: $half-transparent;
+
+    &--display--block {
+      display: block;
     }
   }
 
