--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -1,5 +1,5 @@
 .subscription {
-  height: 100%;
+  width: 100vw;
 
   background-image: url(../images/subscription-bg-mobile.png);
   background-size: cover;
