--- a/src/styles/blocks/tickets.scss
+++ b/src/styles/blocks/tickets.scss
@@ -1,6 +1,11 @@
 .tickets {
   display: flex;
   height: 50px;
+  text-decoration: none;
+
+  cursor: pointer;
+
+  @include hover(box-shadow, 0 5px 15px 0 $secondary-color);
 
   @include onTablet {
     height: 70px;
@@ -14,6 +19,7 @@
     font-size: 16px;
     font-weight: 500;
     line-height: 50px;
+    color: $main-color;
 
     @include onTablet {
       padding-inline: 68px;
