--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,7 +7,7 @@
 
 @import "blocks/header";
 @import "blocks/tickets";
-@import "blocks/exhibitions";
+@import "blocks/exhibitions-link";
 
 @import "blocks/menu";
 @import "blocks/nav";
@@ -17,8 +17,10 @@
 @import "blocks/section-title";
 
 @import "blocks/current-events";
-@import "blocks/event";
+@import "blocks/exhibition";
+@import "blocks/lection";
 @import "blocks/description";
+@import "blocks/description-exhibition";
 @import "blocks/description-lection";
 
 @import "blocks/gallery";
