--- a/src/styles/blocks/art-museum.scss
+++ b/src/styles/blocks/art-museum.scss
@@ -54,6 +54,10 @@
       width: 100%;
       padding-bottom: 40px;
     }
+
+    @include onDesktop() {
+      font-size: 72px;
+    }
   }
 
   &__button {
@@ -66,8 +70,8 @@
     @include hover(transform, scale(1.2));
 
     @include onTable() {
-      width: 100%;
-      margin-right: 0;
+      max-width: 100%;
+      margin: 0;
     }
 
     @include onDesktop() {
