opt everything for every device

--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,9 +1,11 @@
 .page {
+
   &__body {
     margin: 0;
     @include pageGrid;
     min-width: 320px;
     box-sizing: border-box;
+
   }
 
   &__menu {
@@ -26,4 +28,8 @@
     grid-column: 1/-1;
     box-sizing: border-box;
   }
+}
+
+* {
+  scroll-behavior: smooth;
 }
