--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -5,10 +5,13 @@
   background-repeat: no-repeat;
   color: #fff;
   height: fit-content;
-
-
+  margin-bottom: 51px;
 
   @include constentPaddinInline;
+
+  @include onDesktop {
+    margin-bottom: 48px;
+  }
 
   &__title {
     text-align: center;
@@ -53,6 +56,10 @@
       margin-bottom: 82px;
       height: 70px;
       padding-inline: 154px;
+    }
+
+    @include onDesktop {
+      padding-inline: 300px;
     }
 
     &--email {
