--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -1,20 +1,22 @@
 .footer {
   grid-column: 1/-1;
+  @include pageGrid;
   @include constentPaddinInline;
 
-
-  margin-top: 50px;
-
   &__info {
-    @include pageGrid;
-    row-gap: 40px;
-    column-gap: 20px;
     position: relative;
-
     margin-bottom: 111px;
+    grid-column: 1/-1;
+    @include pageGrid;
 
     @include onTablet {
+      grid-column: 1/-1;
       margin-bottom: 129px;
+    }
+
+    @include onDesktop {
+      margin-bottom: 87px;
+      grid-row: 1/-1;
     }
 
     &--link {
@@ -51,10 +53,13 @@
       font-size: 14px;
       font-weight: 400;
       line-height: 150%;
-      grid-column: span 1;
 
       @include onTablet {
-        grid-column: span 2;
+        grid-column: 2/4;
+      }
+
+      @include onDesktop {
+        grid-column: 3/5;
       }
     }
 
@@ -66,20 +71,26 @@
       line-height: 150%;
 
       @include onTablet {
-        grid-column: span 2;
+        grid-column: 4/6;
+      }
+
+      @include onDesktop {
+        grid-column: 5/7;
       }
     }
 
     &--icons {
-      grid-column: 1/-1;
+      grid-column: 1/3;
+      margin-bottom: 40px;
 
       @include onTablet {
-        grid-column: span 1;
+        grid-column: 1/2;
       }
     }
   }
 
   &__copyright {
+    grid-column: 1/-1;
     display: flex;
     row-gap: 10px;
     flex-direction: column;
@@ -101,6 +112,16 @@
 
   &__links {
     position: relative;
+    grid-column: 1/-1;
+
+    @include onTablet {
+      grid-column: 2/6;
+    }
+
+    @include onDesktop {
+      grid-column: -6/-1;
+      grid-row: 1/-1;
+    }
 
     &::before {
       content: '';
@@ -108,7 +129,6 @@
       height: 1px;
       width: 100%;
       background-color: $background-color;
-      grid-column: 1/-1;
       position: absolute;
       top: -40px;
 
@@ -116,10 +136,13 @@
         top: -64px;
         grid-column: 2/6;
       }
-    }
 
-    @include onTablet {
-      @include pageGrid;
+      @include onDesktop {
+        top: 0;
+        left: -65px;
+        height: 99%;
+        width: 1px;
+      }
     }
   }
 }
