--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -2,8 +2,41 @@
   margin-top: 183px;
   @include constentPaddinInline;
 
+  @include onTablet {
+    margin-top: 208px;
+    margin-bottom: 133px;
+  }
+
+  @include onDesktop {
+    margin-top: 302px;
+    @include pageGrid;
+    margin-bottom: 200px;
+
+    &__title {
+      grid-column: 1/-1;
+    }
+
+    &__slide {
+      &-1, &-4 {
+        grid-column: span 4;
+      }
+
+      &-2, &-3 {
+        grid-column: span 8;
+      }
+    }
+  }
+
   &__image {
     width: 100%;
     margin-bottom: 20px;
+
+    @include onDesktop {
+        margin-bottom: 30px;
+    }
+  }
+
+  &__title {
+    padding: 0;
   }
 }
