--- a/src/styles/blocks/links.scss
+++ b/src/styles/blocks/links.scss
@@ -3,21 +3,28 @@
 
   &__list {
     list-style: none;
-    @include pageGrid;
-    grid-column: 1/-1;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
     gap: 20px;
+
     padding: 0;
 
-    @include onTablet {
-      grid-column: 2/6;
+    @include onDesktop {
+      gap: 20px 32px;
     }
   }
 
   &__item {
-    grid-column: span 1;
+    width: 130px;
 
     @include onTablet {
-      grid-column: span 3;
+      width: 220px;
+    }
+
+    @include onDesktop {
+      width: 169px;
     }
   }
 
