added changes from checklist

--- a/src/styles/blocks/exhibition.scss
+++ b/src/styles/blocks/exhibition.scss
@@ -28,6 +28,7 @@
     width: 100%;
     grid-column: 1/-1;
     margin-bottom: 20px;
+    @include transition;
 
     @include onTablet {
       margin-bottom: 44px;
@@ -36,6 +37,10 @@
     @include onDesktop {
       grid-column: span 7;
       margin-bottom: 104px;
+    }
+
+    &:hover {
+      transform: scale(110%);
     }
   }
 
