--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -30,6 +30,11 @@
   &__image {
     width: 100%;
     margin-bottom: 20px;
+    @include transition;
+
+    &:hover {
+      transform: scale(105%);
+    }
 
     @include onDesktop {
         margin-bottom: 30px;
