--- a/src/styles/subscription.scss
+++ b/src/styles/subscription.scss
@@ -1,9 +1,22 @@
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  -webkit-box-shadow: 0 0 0 1000px #fff inset;
+}
+
 .subscription {
   color: $backdrop-text-color;
   text-align: center;
   background-size: cover;
   background-position: center;
   background-image: url(../images/form-background.png);
+  // width: 100%;
   padding: 163px 355px;
   margin-bottom: 48px;
 
@@ -59,6 +72,7 @@
 
     &:focus-visible {
       outline: none;
+      color: #fff;
     }
 
     @include tablet {
@@ -90,5 +104,4 @@
       width: 50px;
     }
   }
-
 }
