--- a/src/styles/events.scss
+++ b/src/styles/events.scss
@@ -121,6 +121,10 @@
     align-items: center;
     gap: 20px;
 
+    @include tablet {
+      margin-top: 44px;
+    }
+
     @include mobile {
       justify-content: space-between;
     }
