Add contacts links

--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -9,4 +9,12 @@
   &__title {
     margin-bottom: 20px;
   }
+
+  &__link {
+    text-decoration: none;
+    color: $main-color;
+
+    @include hover(color, $secondary-color);
+    @include hover(opacity, $half-transparent);
+  }
 }
