--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -2,10 +2,11 @@
 
   &__body {
     margin: 0;
-    @include pageGrid;
+    // @include pageGrid;
     min-width: 320px;
     box-sizing: border-box;
-
+    // max-width: 1224px;
+    // @include constentPaddinInline;
   }
 
   &__menu {
@@ -13,10 +14,11 @@
     top: 0;
     left: 0;
     right: 0;
-    padding: 27px 20px;
+    // padding: 27px 20px;
 
     opacity: 0;
     pointer-events: none;
+
 
     &:target {
       opacity: 1;
