--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -6,11 +6,15 @@
   color: #fff;
   height: fit-content;
   margin-bottom: 51px;
+  padding-block: 88px;
 
-  @include constentPaddinInline;
+  @include onTablet {
+    padding-block: 88px;
+  }
 
   @include onDesktop {
     margin-bottom: 48px;
+    padding-block: 163px;
   }
 
   &__title {
@@ -21,7 +25,6 @@
     line-height: 100%;
 
     margin-bottom: 20px;
-    padding-top: 88px;
 
     @include onTablet {
       font-size: 48px;
@@ -46,14 +49,16 @@
 
   &__form {
     display: flex;
-    box-sizing: border-box;
-    justify-content: center;
+    // grid-column: 1/-1;
+    // box-sizing: border-box;
+    // justify-content: center;
+    @include constentPaddinInline;
 
     height: 50px;
-    margin-bottom: 88px;
+    // margin-bottom: 88px;
 
     @include onTablet {
-      margin-bottom: 82px;
+      // margin-bottom: 82px;
       height: 70px;
       padding-inline: 154px;
     }
