--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,31 +1,25 @@
 .header {
+  background-image: url("/images/header-img.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: top;
   position: relative;
   box-sizing: border-box;
   @include pageGrid;
+  @include constentPaddinInline;
   grid-column: 1 / -1;
   row-gap: 20px;
   margin-bottom: 70px;
 
   @include onTablet {
     margin-bottom: 88px;
+    background-position: right;
+    height: 65vh;
   }
 
   @include onDesktop {
     margin-bottom: 200px;
-  }
-
-  &__img {
-    grid-column: 1/-1;
-    height: 100%;
-    width: 100%;
-
-    @include onTablet {
-      grid-column: -4/-1;
-    }
-
-    @include onDesktop {
-      grid-column: 5/-1;
-    }
+    height: 60vh;
   }
 
   &__logo {
@@ -38,17 +32,17 @@
 
     @include onTablet {
       top: 15px;
-      left: 55%;
+      left: 50%;
     }
 
     @include onDesktop {
       height: 72px;
-      left: 50%;
+      left: 55%;
     }
   }
 
     &__title {
-      @include constentPaddinInline;
+      margin-top: 110%;
       font-family: 'Montserrat', sans-serif;
       font-weight: 700;
       line-height: 100%;
@@ -59,50 +53,65 @@
       @include onTablet {
         grid-column: 1 / 3;
         grid-row: 1/2;
-
+        font-size: 54px;
         line-height: 120%;
         text-align: left;
 
-        margin-top: 50%;
+        margin-top: 60%;
       }
 
       @include onDesktop {
         grid-column: 1/5;
-        font-size: 60px;
+        font-size: 72px;
         margin-top: 40%;
       }
     }
 
     &__link {
+      display: flex;
+      flex-direction: row;
+      width: 100%;
       grid-column: 1/-1;
-      @include constentPaddinInline;
       height: 50px;
       font-family: 'IBM Plex Sans', sans-serif;
       font-size: 16px;
       font-weight: 500;
       line-height: 100%;
+      box-sizing: border-box;
 
       @include onTablet {
-        grid-column: 1/4;
+        grid-column: 1/3;
         grid-row: 1/-1;
-        margin-top: 70%;
-        display: flex;
-        width: 269px;
-        height: 70px;
-        align-items: center;
-        gap: 67px;
+        margin-top: 130%;
       }
 
       @include onDesktop {
-        grid-column: 2/5;
-        margin-top: 110%;
+        grid-column: 3/6;
+        margin-top: 160%;
+      }
+
+      &-button {
+        background-color: $background-color;
+        width: 50px;
+        height: 50px;
+        top: 0;
+        right: 0;
+        background-image: url("/images/icons/arrow.svg");
+        background-repeat: no-repeat;
+        background-size: 24px;
+        background-position: center;
+        @include transition;
+
+        &:hover {
+          background-image: url("/images/icons/arrow-black.svg");
+          background-color: $rectangle-color;
+        }
       }
 
       &-tickets {
         border: 1px solid $background-color;
         padding-block: 17px;
         padding-inline: 80px;
-        display: flex;
         box-sizing: border-box;
 
         position: relative;
@@ -112,21 +121,6 @@
 
         @include onTablet {
           padding-inline: 68px;
-        }
-
-        &::after {
-          position: absolute;
-          content: '';
-          background-color: $background-color;
-          width: 50px;
-          height: 50px;
-          top: 0;
-          right: 0;
-
-          background-image: url("/images/icons/arrow.svg");
-          background-repeat: no-repeat;
-          background-size: 24px;
-          background-position: center;
         }
       }
     }
