--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -8,7 +8,7 @@
     row-gap: 24px;
     column-gap: 28px;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-between;
 
     @include onTablet {
       column-gap: 20px;
@@ -17,7 +17,7 @@
   }
   &__link {
     display: block;
-    width: 100px;
+    width: 92px;
     color: #fff;
     text-decoration: none;
     font-size: 16px;
