fixed almost all mistakes

--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -1,6 +1,19 @@
 .gallery {
   margin-top: 183px;
   @include constentPaddinInline;
+  margin-bottom: 129px;
+
+  &__slide {
+    &-2, &-3, &-4 {
+      display: none;
+    }
+
+    @include onDesktop {
+      &-2, &-3, &-4 {
+        display: flex;
+      }
+    }
+  }
 
   @include onTablet {
     margin-top: 208px;
@@ -43,5 +56,14 @@
 
   &__title {
     padding: 0;
+  }
+
+  &__dots {
+    display: flex;
+    justify-content: center;
+
+    @include onDesktop {
+      display: none;
+    }
   }
 }
