--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -4,6 +4,7 @@
   background-color: rgba(60, 60, 60, 0.6);
   overflow: auto;
   font-family: 'IBM Plex Sans', sans-serif;
+  max-width: 1280px;
 
   &__wrap {
     background-color: $background-color;
@@ -14,6 +15,7 @@
     padding-block: 27px;
 
     @include onTablet {
+
       @include pageGrid;
       grid-column: 1/-1;
       padding-block: 39px;
@@ -41,13 +43,16 @@
 
   &__nav {
 
+    padding-inline: 40px;
+
     @include onTablet {
       grid-column: 1/4;
-      margin-inline: 38px;
+      padding-inline: 60px;
     }
 
     @include onDesktop {
       grid-column: 2/6;
+      padding-inline: 30px;
     }
   }
 }
