--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,12 +1,14 @@
 .page {
 
+  &:has(.page__menu:target) {
+    overflow: hidden;
+  }
+
   &__body {
     margin: 0;
-    // @include pageGrid;
     min-width: 320px;
     box-sizing: border-box;
-    // max-width: 1224px;
-    // @include constentPaddinInline;
+    max-width: 1280px;
   }
 
   &__menu {
@@ -14,7 +16,6 @@
     top: 0;
     left: 0;
     right: 0;
-    // padding: 27px 20px;
 
     opacity: 0;
     pointer-events: none;
