--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -25,6 +25,7 @@
     line-height: 100%;
 
     margin-bottom: 20px;
+    @include constentPaddinInline;
 
     @include onTablet {
       font-size: 48px;
@@ -40,6 +41,7 @@
     line-height: 150%;
 
     margin-bottom: 50px;
+    @include constentPaddinInline;
 
     @include onTablet {
       line-height: 100%;
@@ -49,16 +51,11 @@
 
   &__form {
     display: flex;
-    // grid-column: 1/-1;
-    // box-sizing: border-box;
-    // justify-content: center;
     @include constentPaddinInline;
 
     height: 50px;
-    // margin-bottom: 88px;
 
     @include onTablet {
-      // margin-bottom: 82px;
       height: 70px;
       padding-inline: 154px;
     }
