--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -8,4 +8,14 @@
     font-weight: 400;
     line-height: 140%;
   }
+
+  &--schedule__link {
+    text-decoration: none;
+    color: $main-text-color;
+    @include transition;
+
+    &:hover {
+      color: $background-color;
+    }
+  }
 }
