--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -1,27 +1,59 @@
 .nav {
 
   &__list {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
     margin: 0;
     list-style: none;
-    display: flex;
-    flex-direction: row;
     row-gap: 24px;
     column-gap: 28px;
-    flex-wrap: wrap;
     justify-content: space-between;
+    padding-inline: 15px 0;
 
     @include onTablet {
       column-gap: 20px;
     }
 
+    @include onDesktop {
+      column-gap: 31px;
+      padding-inline: 0;
+    }
+
   }
   &__link {
+    position: relative;
     display: block;
-    width: 92px;
     color: #fff;
     text-decoration: none;
     font-size: 16px;
     font-weight: 500;
     line-height: 100%;
+
+    @include onDesktop {
+      font-size: 22px;
+    }
+
+    // &:hover {
+
+    // }
+
+    &::after {
+      content: '';
+      position: absolute;
+      left: -8px;
+      top: 0;
+      display: block;
+      height: 100%;
+      width: 1px;
+      background-color:#fff;
+
+      transition: transform 500ms;
+      transform: scale(0);
+    }
+
+    &:hover::after {
+      transform: scale(1);
+    }
   }
 }
+
