added more color variables

--- a/src/styles/blocks/article.scss
+++ b/src/styles/blocks/article.scss
@@ -48,7 +48,7 @@
 
   &__exhibition {
     text-transform: uppercase;
-    color: #687480;
+    color: $c-gray-light;
     font-weight: 500;
     line-height: 100%;
 
@@ -76,7 +76,7 @@
   &__time {
     font-weight: 700;
     line-height: 150%;
-    color: #1a5a4c;
+    color: $c-dark-green;
   }
 
   &__link {
@@ -91,7 +91,7 @@
         width: 100%;
       }
       & img {
-        @include hover(scale, 1.0);
+        @include hover(scale, 1);
       }
 
     }
@@ -103,7 +103,8 @@
     @include onTablet {
       height: 520px;
     }
-    @include hover(scale, 1.05)
+    @include hover(scale, 1.05);
+
   }
 
   &__title {
@@ -114,7 +115,7 @@
     font-size: 28px;
     font-weight: 400;
     line-height: 100%;
-    color: #0F0E08;
+    color: $c-dark;
 
     @include onTablet {
       grid-column: 1 / -1;
@@ -135,7 +136,7 @@
       margin: auto 0;
       height: 10px;
       width: 10px;
-      background-color: #f14a27;
+      background-color: $c-orange;
     }
 
     &--extra {
@@ -160,7 +161,7 @@
     font-style: normal;
     font-weight: 300;
     line-height: 150%;
-    color: #4E4E4E;
+    color: #4e4e4e;
 
     @include onTablet {
       grid-column: 1 / 5;
@@ -176,8 +177,8 @@
       margin: 0 auto;
       height: 140px;
       width: 280px;
-      background-color: #fff;
-      box-shadow: 0px 2px 0px 0px rgba(26, 90, 76, 0.25);
+      background-color: $c-white;
+      box-shadow: 0 2px 0 0 rgba(26, 90, 76, 0.25);
 
       @include onTablet {
         height: 204px;
