--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -9,7 +9,7 @@
   font-style: normal;
   font-weight: 400;
   line-height: 150%;
-  color: #0F0E08;
+  color: $c-dark;
 
   @include onTablet {
     @include pageGrid;
@@ -39,7 +39,8 @@
     line-height: 100%;
     font-size: 30px;
 
-    @include hover(scale, 1.1)
+    @include hover(scale, 1.1);
+
   }
   &__link {
     display: flex;
@@ -74,7 +75,7 @@
       bottom: -70px;
       height: 1px;
       width: 100%;
-      background-color: #1A5A4C80;
+      background-color: #1a5a4c80;
 
       @include onLaptop {
         bottom: 0;
@@ -101,7 +102,6 @@
     &-text-wrapper {
       @include onTablet {
         width: 144px;
-        // width: min-content;
       }
     }
   }
@@ -116,13 +116,13 @@
     width: 50px;
     transform: translateY(100%);
     border-radius: 50%;
-    border: 1px solid #1A5A4C;
+    border: 1px solid $c-dark-green;
 
     &-link {
       position: absolute;
       height: 16px;
       width: 16px;
-      background-image: url('../images/icons/arrow-up.svg');
+      background-image: url("../images/icons/arrow-up.svg");
       background-size: cover;
     }
 
