--- a/src/styles/blocks/section.scss
+++ b/src/styles/blocks/section.scss
@@ -11,7 +11,7 @@
   &__title {
     padding-bottom: 40px;
     padding-left: 20px;
-    color: #0F0E08;
+    color: $c-dark;
     font-family: "Montserrat", sans-serif;
     font-size: 36px;
     font-weight: 700;
@@ -27,4 +27,3 @@
     }
   }
 }
-
