--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -22,13 +22,10 @@
 
     @include onLaptop {
       @include pageGrid;
-      // gap: 0 !important;
       height: fit-content;
       overflow: unset;
       margin-inline: 0 !important;
       scroll-snap-type: none !important;
-      // flex-direction: column;
-      // height: auto;
     }
   }
 
@@ -73,8 +70,8 @@
         width: 0;
         height: 0;
         display: block;
-        padding: 600px 100% 0px 0px;
-        background: url('../images/slider/slider-3.png') no-repeat;
+        padding: 600px 100% 0 0;
+        background: url("../images/slider/slider-3.png") no-repeat;
         background-size: cover;
         background-position: center;
       }
@@ -85,7 +82,7 @@
         height: 0;
         width: 0;
         padding: 360px 100% 0 0;
-        background: url('../images/slider/slider-5.png') no-repeat;
+        background: url("../images/slider/slider-5.png") no-repeat;
         background-position: center;
         background-size: cover;
       }
@@ -115,7 +112,7 @@
       transform: scale(1.2);
     }
     &--active {
-      background-color: #1a5a4c;
+      background-color: $c-dark-green;
     }
   }
 }
