--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -28,8 +28,8 @@
     font-style: normal;
     font-weight: 400;
     line-height: 150%;
-    color: #FFF;
-    background-color: #1a5a4c;
+    color: $c-white;
+    background-color: $c-dark-green;
 
     @include onTablet {
       flex-direction: row;
@@ -91,8 +91,9 @@
       margin: 5px 0 0 5px;
     }
 
-    & img{
-      @include hover(scale, 1.3)
+    & img {
+      @include hover(scale, 1.3);
+
     }
   }
   &-nav-link {
@@ -103,7 +104,8 @@
     @include onLaptop {
       font-size: 22px;
     }
-    @include hover(scale, 1.1)
+
+    @include hover(scale, 1.1);
   }
 
   &-info {
@@ -165,9 +167,10 @@
   &-text {
     &-bold {
       font-weight: 600;
+
     }
     &-light {
-      font-weight: 400
+      font-weight: 400;
     }
   }
 }
