--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -114,11 +114,9 @@
       font-size: 45px;
       text-align: center;
       grid-column: 1 / -1;
-      // margin-top: 40vh;
 
       @include onTablet {
         grid-column: 1 / 3;
-        // grid-row: 1/2;
         font-size: 54px;
         line-height: 120%;
         text-align: left;
@@ -128,14 +126,13 @@
       @include onDesktop {
         grid-column: 1/5;
         font-size: 72px;
-        // margin-top: 40%;
       }
     }
 
     &__link {
       display: flex;
       flex-direction: row;
-      width: 100%;
+      width: 280px;
       grid-column: 1/-1;
       height: 50px;
       font-family: 'IBM Plex Sans', sans-serif;
@@ -143,18 +140,17 @@
       font-weight: 500;
       line-height: 100%;
       box-sizing: border-box;
-      justify-content: center;
+      justify-self: center;
 
       @include onTablet {
         grid-column: 1/3;
-        // grid-row: 1/-1;
-        // margin-top: 130%;
+        width: 270px;
         height: 70px;
+        justify-self: left;
       }
 
       @include onDesktop {
         grid-column: 3/6;
-        // margin-top: 160%;
       }
 
       &-button {
@@ -177,14 +173,13 @@
         @include onTablet {
           width: 70px;
           height: 70px;
-          padding-inline: 25px;
         }
       }
 
       &-tickets {
         border: 1px solid $background-color;
+        width: 230px;
         padding-block: 17px;
-        padding-inline: 80px;
         box-sizing: border-box;
 
         position: relative;
@@ -193,7 +188,7 @@
         text-align: center;
 
         @include onTablet {
-          padding-inline: 68px;
+          width: 200px;
           padding-block: 28px;
         }
       }
