--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -8,7 +8,7 @@
     margin: 0;
     min-width: 320px;
     box-sizing: border-box;
-    max-width: 1280px;
+    // max-width: 1280px;
   }
 
   &__menu {
