trying to fix autofill

--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -115,6 +115,6 @@ select:-webkit-autofill,
 select:-webkit-autofill:hover,
 select:-webkit-autofill:focus {
   -webkit-text-fill-color: $secondary-title-color;
-  // -webkit-box-shadow: none;
+  -webkit-box-shadow: none;
   background-color: #fff;
 }
