--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -114,7 +114,8 @@ textarea:-webkit-autofill:focus,
 select:-webkit-autofill,
 select:-webkit-autofill:hover,
 select:-webkit-autofill:focus {
-  // -webkit-text-fill-color: $secondary-title-color;
+  -webkit-text-fill-color: $secondary-title-color;
   -webkit-box-shadow: none;
-  background-color: transparent;
+  background-color: #fff;
+  border: none;
 }
