--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -75,6 +75,10 @@
       line-height: 100%;
       color: $secondary-title-color;
       padding-left: 24px;
+
+      &:-webkit-autofill {
+        -webkit-box-shadow: 0 0 0 30px #fff inset !important;
+      }
     }
   }
 
@@ -105,17 +109,3 @@
   }
 }
 
-input:-webkit-autofill,
-input:-webkit-autofill:hover,
-input:-webkit-autofill:focus,
-textarea:-webkit-autofill,
-textarea:-webkit-autofill:hover,
-textarea:-webkit-autofill:focus,
-select:-webkit-autofill,
-select:-webkit-autofill:hover,
-select:-webkit-autofill:focus {
-  -webkit-text-fill-color: $secondary-title-color;
-  -webkit-box-shadow: none;
-  background-color: #fff;
-  border: none;
-}
