moved logo to the left side, fixed problem with reloading page after submiting form, removed default input autofill styles

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -82,6 +82,8 @@
 
     @include onTablet {
       font-size: 36px;
+      left: 64px;
+      right: auto
     }
 
     @include hover(scale, 1.2);
@@ -160,7 +162,6 @@
       font-weight: 500;
       line-height: 100%;
 
-      @include hover(scale, 1.2);
 
     }
     &-right {
