--- a/src/styles/utils/reset.scss
+++ b/src/styles/utils/reset.scss
@@ -13,9 +13,25 @@ a {
 }
 
 button {
+  cursor: pointer;
   border: none;
 }
 
 input {
   outline: none;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  border: none;
+  -webkit-text-fill-color: #000;
+  -webkit-box-shadow: none;
+  transition: background-color 5000s ease-in-out 0s;
 }
