--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,30 @@
 @import "utils";
-@import "fonts";
-@import "typography";
+@import "utils/vars";
+
+@import "block/container.scss";
+@import "block/header.scss";
+@import "block/page.scss";
+@import "block/menu.scss";
+@import "block/section.scss";
+@import "block/event.scss";
+@import "block/gallery.scss";
+@import "block/subscription.scss";
+@import "block/footer.scss";
 
 body {
   background: $c-gray;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+h1,
+h2,
+h3 {
+  margin: 0;
+}
+
+p {
+  margin: 0;
 }
