--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -9,6 +9,7 @@
   &__photos {
     position: relative;
     display: flex;
+    gap: 16px;
     height: 410px;
     width: 100%;
     overflow-x: auto;
