--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,5 @@
-$c-gray: #eee;
+$paddigInlineMobile: 20px;
+$paddigInlineTablet: 39px;
+$paddigInlineDesktop: 55px;
+$tablet-min-width: 640px;
+$desktop-min-width: 1280px;
