--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,6 @@
-@import "utils";
-@import "fonts";
-@import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "partials/utils";
+@import "partials/reset";
+@import "partials/general";
+@import "partials/typography";
+@import "blocks/header.scss";
+@import "blocks/icon.scss";
